[gd_scene load_steps=12 format=3 uid="uid://dojuhg6i0qkom"]

[ext_resource type="Texture2D" uid="uid://dyeinwifdaynn" path="res://assets/kenney_scribble-dungeons/2x/barrel.png" id="1_3oc4c"]
[ext_resource type="Script" uid="uid://c4db2ij6sossh" path="res://scenes/enemies/brute-enemy/brute_enemy.gd" id="1_khgsc"]
[ext_resource type="Texture2D" uid="uid://c043nqrir7wg7" path="res://assets/kenney_scribble-dungeons/modified/dragon_mod.png" id="3_11bh0"]
[ext_resource type="Texture2D" uid="uid://btukvyg0wnjts" path="res://assets/kenney_scribble-dungeons/weapon_hammer.png" id="4_vf33n"]
[ext_resource type="Texture2D" uid="uid://tko50edrxthe" path="res://assets/kenney_scribble-dungeons/shield_straight.png" id="5_e0a21"]
[ext_resource type="PackedScene" uid="uid://2bu752bigj81" path="res://scenes/enemies/enemy_damage_popup.tscn" id="6_e0a21"]

[sub_resource type="CircleShape2D" id="CircleShape2D_en535"]
radius = 17.4642

[sub_resource type="Animation" id="Animation_e0a21"]
resource_name = "WALK"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barrel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_o5bbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barrel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Barrel/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17.7778, -32.2222)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Barrel/Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.55967]
}

[sub_resource type="Animation" id="Animation_mub0w"]
resource_name = "ATTACK"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barrel/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(17.7778, -32.2222), Vector2(29.708, -27.852), Vector2(17.7778, -32.2222)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Barrel/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.55967, 1.76104, 1.55967]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mub0w"]
_data = {
&"ATTACK": SubResource("Animation_mub0w"),
&"RESET": SubResource("Animation_o5bbt"),
&"WALK": SubResource("Animation_e0a21")
}

[node name="BruteEnemy" type="Area2D" groups=["enemy"]]
script = ExtResource("1_khgsc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_en535")

[node name="Barrel" type="Sprite2D" parent="."]
self_modulate = Color(0.504182, 0.496156, 0.488126, 1)
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_3oc4c")

[node name="Weapon" type="Sprite2D" parent="Barrel"]
self_modulate = Color(0.623529, 0.647059, 0.662745, 1)
position = Vector2(17.7778, -32.2222)
rotation = 1.55967
scale = Vector2(1.11111, 1.11111)
texture = ExtResource("4_vf33n")

[node name="ShieldStraight" type="Sprite2D" parent="Barrel"]
self_modulate = Color(0.705882, 0.403922, 0.423529, 1)
position = Vector2(2.22222, 33.3333)
rotation = 2.9245
scale = Vector2(1.11111, 1.11111)
texture = ExtResource("5_e0a21")

[node name="DragonMod" type="Sprite2D" parent="Barrel"]
self_modulate = Color(0.580392, 0.486275, 0.552941, 1)
position = Vector2(-9.95556, 2.23333)
rotation = -2.33351
scale = Vector2(1.11111, 1.11111)
texture = ExtResource("3_11bh0")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="EnemyDamagePopup" parent="." instance=ExtResource("6_e0a21")]
position = Vector2(-9, -42)

[node name="DeathTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mub0w")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
